--- a/app/src/main/res/layout/content_ofertalaboral.xml
+++ b/app/src/main/res/layout/content_ofertalaboral.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:clickable="true">
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:focusableInTouchMode="false">
 
     <TextView
         android:id="@+id/textView_Categoria"
@@ -95,8 +97,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="En Ingles"
+            android:enabled="true"
             android:textColor="@color/colorPrimaryDark"
-            android:clickable="false" />
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"/>
     </LinearLayout>
 
 </LinearLayout>
